# narvi-example

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  manage.py  pyproject.toml
narvi/: asgi.py  settings.py  urls.py  wsgi.py
tests/: test_word_grouping.py
words/: admin.py  models.py  serializers.py  urls.py  views.py
words/migrations/: 0001_initial.py
words/utils/: word_grouping.py
